# Messenger

./: README.md
App/: CMakeLists.txt
App/src/: Messenger.cpp  Messenger.h  config.h
App/src/Network/: Network.cpp  Network.h
App/src/User/: User.cpp  User.h
Bot/: __main__.py
MongoDB Docker/: docker-compose.yml
Server/: __main__.py  chats.py  crypt.py  crypto.py  database.py  requirements.txt  responses.py  server.pem  users.py
